<resources>
    <string name="app_name">NotOrtalamasiHesaplamaUygulamasi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sinav1">Vize Sınav Notunuzu Giriniz</string>
    <string name="sinav2">Final Sınav Notunuzu Giriniz</string>
    <string name="hesapla">ORTALAMA HESAPLA</string>
    <string name="sonucText">SONUÇ</string>
    <string name="textBaslık">NOT ORTALAMASI HESAPLAMA</string>
</resources>