<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textBaslık"
                android:textSize="27sp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/editTextNumber1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/sinav1"
                android:inputType="number"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/sinav2"
                android:inputType="number"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonHesapla"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber1"
                app:layout_constraintStart_toStartOf="@+id/editTextNumber1"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber1" />

            <Button
                android:id="@+id/buttonHesapla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/hesapla"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/sonucText"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

            <TextView
                android:id="@+id/sonucText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sonucText"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonHesapla"
                app:layout_constraintStart_toStartOf="@+id/buttonHesapla"
                app:layout_constraintTop_toBottomOf="@+id/buttonHesapla" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>